tests/algorithms/x/Clojure/project_euler/problem_049/sol1.error
run: exit status 1
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/algorithms/x/Clojure/project_euler/problem_049/sol1.clj:136:2521).
Can only recur from tail position

Full report at:
/tmp/clojure-6449010165969472878.edn
